# laba1test2

./: .gitignore
CMake2/: CMakeLists.txt  лаба_2.cpp
NewRes1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  laba1.sln  laba1.vcxproj  laba1.vcxproj.filters
NewRes1/laba1.dir/Debug/: laba1.exe.recipe  laba1.ilk
NewRes1/laba1.dir/Debug/laba1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  laba1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NewRes1/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
NewRes2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  laba1.sln  laba1.vcxproj  laba1.vcxproj.filters
NewRes2/laba1.dir/Debug/: laba1.exe.recipe  laba1.ilk
NewRes2/laba1.dir/Debug/laba1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  laba1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NewRes2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Res2/: лаба_2.sln  лаба_2.vcxproj
Res2/Debug/: vc143.idb
Res2/Debug/лаба_2.tlog/: лаба_2.lastbuildstate
Res2/x64/Debug/: vc143.idb  лаба_2.exe.recipe  лаба_2.ilk  лаба_2.vcxproj.FileListAbsolute.txt
Res2/x64/Debug/лаба_2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.read.1.tlog  (+3 more)
(+17 files in other folders)
