cmake_minimum_required(VERSION 3.15)	# устанавливает минимально необходимую версию для проекта (3.15 - самая оптимальная версия).
					# Если версия установленой программммы старее указаной, произойдёт аварийный выход.
	 				# если не написать эту строку, то проект все равно соберется, но лучше писать
	 
project(laba1)           	    	# задает имя проекта

set(CMAKE_CXX_STANDARD 17)		# указывает стандарт с++ функции и с которой версией проект будет собираться
					# есть с++98 с++11 с++14 с++17 с++20.....
					# в визуалке 14 стандарт описывает как компилятор должен выполнять команды
     					# CXX то же что и C++

set(CMAKE_CXX_STANDARD_REQUIRED TRUE)	# тру говорит что стандарт нужно указать
					# set - присваивание 

set(CMAKE_CXX_EXTENSIONS OFF)		# специфичные расширения, например -std=gnu++11 вместо -std=c++11

add_executable(laba1 лаба_2.cpp)	# добавляет задачу создать исполняемый файл
					# после названия проекта указываются файлы из которых собирается проект